--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,14 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "paths": {
+      "api/*": ["./app/api/*"],
+      "components/*": ["./app/components/*"],
+      "redux/*": ["./app/redux/*"],
+      "lib/*": ["./app/lib/*"],
+      "pages/*": ["./app/pages/*"]
+    }
   },
   "include": [
     "next-env.d.ts",
